[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lbrc_selenium"
version = "2.0.0"
authors = [
  {name="Richard Bramley", email="rabramley@gmail.com" },
]
description = "NIHR Leicester BRC Selenium Toolset"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies=[
  'jsonlines',
  'packaging',
  'selenium',
  'Werkzeug',
]

[project.urls]
Homepage = "https://github.com/LCBRU/lbrc_selenium"
Issues = "https://github.com/LCBRU/lbrc_selenium/issues"